2003-06-12  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/OpenOfficeDoc.py: Fix typo. Prevent images from being
	copied more than once.

2003-06-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPlace.py (on_switch_page): Fix page numbers to enable proper
	loading of gallery and references. 
	* src/EditPlace.py: Add url_edit_callback() and pass it on to UrlEdit 
	when clicked on Add or Edit in Place's Url list.

2003-06-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (Book.pop_item): Add missing return
	statement. 
	* src/plugins/BookReport.py (BookReportSelector.open_book): 
	Add a warning if the database for the book is not the same as current.

2003-06-11  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/HtmlDoc.py (add_photo): Fix typo in image reference.

2003-06-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py: Add more values for book item registration.
	* src/plugins/FtmStyleDescendants.py: Comply with book changes.
	* src/plugins/FtmStyleAncestors.py: Likewise.
	* src/plugins/BookReport.py: Rewrite most of the code using new classes:
	BookItem, Book, BookList, BookParser, BookListDisplay. Add
	open/save/edit functionality. 
	* src/plugins/book.glade: Add new dialog for BookListDisplay. Also add
	a text entry field for saving book and new buttons: Open, Edit, Save.

2003-06-10  Tim Waugh  <twaugh@redhat.com>
	* src/styles.glade: - scrolling fix
	* src/dialog.glade: - scrolling fix
	* src/edit_person.glade: - scrolling fix
	* src/gramps.glade: - scrolling fix
	* src/imagesel.glade: - scrolling fix
	* src/marriage.glade: - scrolling fix
	* src/mergedata.glade: - scrolling fix
	* src/places.glade: - scrolling fix
	* src/rule.glade: - scrolling fix
	* src/srcsel.glade: - scrolling fix

2003-06-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Date.py: Handle date ranges in the form of xxxx - xxxx
	* src/ListModel.py: Be able to select based off an iter